@@ -5,6 +5,7 @@ User level Subscriber not shown Google Analytics stats - FIXED
 GeoDirectory custom script & css should not be printed in backend - FIXED
 Added two hooks to search queries - ADDED
 Post tags has a DB limit of 254, removed this limit - FIXED
+The recent reviews shortcode is missing the title attribute - FIXED
 
 v1.4.9
 Google Analytics extra error messages added to help users debug - ADDED
